change color and layout components

--- a/res/layout/category.xml
+++ b/res/layout/category.xml
@@ -9,7 +9,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Cadastrar Categoria"
-        android:textAppearance="?android:attr/textAppearanceLarge" android:gravity="center_horizontal" android:layout_marginBottom="60px"/>
+        android:textAppearance="?android:attr/textAppearanceLarge" android:gravity="center_horizontal" android:layout_marginBottom="50px"/>
 
     <TextView
         android:id="@+id/categoryLabel"
@@ -21,7 +21,7 @@
     <EditText
         android:id="@+id/category"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" android:layout_marginBottom="60px">
+        android:layout_height="wrap_content" android:layout_marginBottom="50px" android:background="@drawable/edit_text" android:layout_marginLeft="5px" android:layout_marginRight="5px">
 
         <requestFocus />
     </EditText>
@@ -30,6 +30,6 @@
         android:id="@+id/record"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Cadastrar" />
+        android:text="Cadastrar" android:background="@drawable/button_save" android:layout_marginLeft="5px" android:layout_marginRight="5px"/>
 
 </LinearLayout>
