trying to create category

--- a/public/ember/app/templates/application.hbs
+++ b/public/ember/app/templates/application.hbs
@@ -1,4 +1,4 @@
-{{link-to "Categorias" "categories"}}
+{{link-to "Categorias" "categories.index"}}
 {{link-to "Transações" "transactions"}}
 
 {{outlet}}
