--- a/public/ember/app/templates/categories/index.hbs
+++ b/public/ember/app/templates/categories/index.hbs
@@ -1,6 +1,6 @@
 <h1>Categorias</h1>
 
-{{link-to "Criar categoria" "categories/new"}}
+{{link-to "Criar categoria" "categories.new"}}
 
 {{#each model as |category|}}
 	<p>{{category.name}}</p>
